--- a/Pricing_AB_Testing.ipynb
+++ b/Pricing_AB_Testing.ipynb
@@ -49,31 +49,31 @@
    "source": [
     "<a name=toc></a> **目录：**\n",
     "\n",
-    "- 0. [背景与目标](#0)\n",
-    "- 1. [数据预热](#1)\n",
-    "  - 1.1 [数据说明](#1.1)\n",
-    "  - 1.2 [`user` 数据处理](#1.2)\n",
-    "  - 1.3 [`test` 数据处理](#1.3)\n",
-    "  - 1.4 [数据融合](#1.4)\n",
-    "  - 1.5 [数据准备](#1.5)\n",
-    "- 2. [随机分配检验](#2)\n",
-    "  - 2.1 [数值数据 t-test 检验](#2.1)\n",
-    "  - 2.2 [时间序列随机检验](#2.2)\n",
-    "  - 2.3 [类别数据 chi2-test 检验](#2.3)\n",
-    "  - 2.4 [利用树模型检验](#2.4)\n",
-    "- 3. [怎么定价](#3)\n",
-    "  - 3.1 [整体分析](#3.1)\n",
-    "  - 3.2 [细分群体](#3.2)\n",
-    "  - 3.3 [最终结论](#3.3)\n",
-    "- 4. [何时结束](#4)\n",
-    "  - 4.1 [计算样本量](#4.1)\n",
-    "  - 4.2 [计算终止时期](#4.2)\n",
-    "- 5. [数据总览](#5)\n",
-    "  - 5.1 [转化率考察](#5.1)\n",
-    "  - 5.2 [指标体系搭建](#5.2)\n",
-    "  - 5.3 [行动方案](#5.3)\n",
-    "- 6. [结语](#6)\n",
-    "- 7. [参考资料](#7)"
+    "- [0. 背景与目标](#0)\n",
+    "- [1. 数据预热](#1)\n",
+    "  - [1.1 数据说明](#1.1)\n",
+    "  - [1.2 `user` 数据处理](#1.2)\n",
+    "  - [1.3 `test` 数据处理](#1.3)\n",
+    "  - [1.4 数据融合](#1.4)\n",
+    "  - [1.5 数据准备](#1.5)\n",
+    "- [2. 随机分配检验](#2)\n",
+    "  - [2.1 数值数据 t-test 检验](#2.1)\n",
+    "  - [2.2 时间序列随机检验](#2.2)\n",
+    "  - [2.3 类别数据 chi2-test 检验](#2.3)\n",
+    "  - [2.4 利用树模型检验](#2.4)\n",
+    "- [3. 怎么定价](#3)\n",
+    "  - [3.1 整体分析](#3.1)\n",
+    "  - [3.2 细分群体](#3.2)\n",
+    "  - [3.3 最终结论](#3.3)\n",
+    "- [4. 何时结束](#4)\n",
+    "  - [4.1 计算样本量](#4.1)\n",
+    "  - [4.2 计算终止时期](#4.2)\n",
+    "- [5. 数据总览](#5)\n",
+    "  - [5.1 转化率考察](#5.1)\n",
+    "  - [5.2 指标体系搭建](#5.2)\n",
+    "  - [5.3 行动方案](#5.3)\n",
+    "- [6. 结语](#6)\n",
+    "- [7. 参考资料](#7)"
    ]
   },
   {
@@ -9226,7 +9226,7 @@
    "source": [
     "开始绘图吧：\n",
     "\n",
-    "1. 哪里蛋糕多？"
+    "- 1. 哪里蛋糕多？"
    ]
   },
   {
@@ -9277,7 +9277,7 @@
    "id": "e8ce5c7f",
    "metadata": {},
    "source": [
-    "2. 哪里分得多？"
+    "- 2. 哪里分得多？"
    ]
   },
   {
@@ -9328,7 +9328,7 @@
    "id": "72775e43",
    "metadata": {},
    "source": [
-    "3. 哪里分更多？"
+    "- 3. 哪里分更多？"
    ]
   },
   {
