--- a/Pricing_AB_Testing.ipynb
+++ b/Pricing_AB_Testing.ipynb
@@ -29,7 +29,8 @@
     "| Date (YYYY-MM-DD) | Version | Change Description                             |\n",
     "| ----------------- | ------- | ---------------------------------------------- |\n",
     "| 2022-01-30        | 1.0     | Finish initial version of the Jupyter Notebook |\n",
-    "| 2022-02-17        | 1.1     | Fix Jupyter nbviewer rendering issues          |"
+    "| 2022-02-17        | 1.1     | Fix Jupyter nbviewer rendering issues          |\n",
+    "| 2022-05-09        | 1.2     | Fix numbered lists rendering issues            |"
    ]
   },
   {
@@ -9226,7 +9227,7 @@
    "source": [
     "开始绘图吧：\n",
     "\n",
-    "- 1. 哪里蛋糕多？"
+    "1). 哪里蛋糕多？"
    ]
   },
   {
@@ -9277,7 +9278,7 @@
    "id": "e8ce5c7f",
    "metadata": {},
    "source": [
-    "- 2. 哪里分得多？"
+    "2). 哪里分得多？"
    ]
   },
   {
@@ -9328,7 +9329,7 @@
    "id": "72775e43",
    "metadata": {},
    "source": [
-    "- 3. 哪里分更多？"
+    "3). 哪里分更多？"
    ]
   },
   {
